--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Starcatcher: Jaemz's Arcade Game Clone</title>
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
